crates/top/re_sdk/tests/lenses/snapshots/lenses__lenses__operations__scatter_columns.snap
---
source: crates/top/re_sdk/tests/lenses/operations.rs
expression: "format!(\"{chunk:-240}\")"
---
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                       │
│ * entity_path: /scatter_test/exploded                                                                                                           │
│ * id: [**REDACTED**]                                                                                                                            │
│ * version: [**REDACTED**]                                                                                                                       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌──────────────────────────────────────────────┬──────────────────────────┬──────────────────┬─────────────────────────────┬──────────────────┐ │
│ │ RowId                                        ┆ my_timestamp             ┆ tick             ┆ exploded_strings            ┆ tag              │ │
│ │ ---                                          ┆ ---                      ┆ ---              ┆ ---                         ┆ ---              │ │
│ │ type: non-null FixedSizeBinary(16)           ┆ type: Int64              ┆ type: Int64      ┆ type: List(Utf8)            ┆ type: List(Utf8) │ │
│ │ ARROW:extension:metadata:                    ┆ index_name: my_timestamp ┆ index_name: tick ┆ component: exploded_strings ┆ component: tag   │ │
│ │ {"namespace":"row"}                          ┆ is_sorted: true          ┆ is_sorted: true  ┆ kind: data                  ┆ kind: data       │ │
│ │ ARROW:extension:name: TUID                   ┆ kind: index              ┆ kind: index      ┆                             ┆                  │ │
│ │ is_sorted: true                              ┆                          ┆                  ┆                             ┆                  │ │
│ │ kind: control                                ┆                          ┆                  ┆                             ┆                  │ │
│ ╞══════════════════════════════════════════════╪══════════════════════════╪══════════════════╪═════════════════════════════╪══════════════════╡ │
│ │ row_[**REDACTED**]                           ┆ 1                        ┆ 1                ┆ [one]                       ┆ [a]              │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                           ┆ 2                        ┆ 1                ┆ [two]                       ┆ [a]              │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                           ┆ 3                        ┆ 1                ┆ [three]                     ┆ [a]              │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                           ┆ 4                        ┆ 2                ┆ [four]                      ┆ [b]              │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                           ┆ 5                        ┆ 3                ┆ null                        ┆ [c]              │ │
│ └──────────────────────────────────────────────┴──────────────────────────┴──────────────────┴─────────────────────────────┴──────────────────┘ │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
