crates/top/re_sdk/tests/lenses/snapshots/lenses__lenses__operations__single_static.snap
---
source: crates/top/re_sdk/tests/lenses/operations.rs
expression: "format!(\"{chunk:-240}\")"
---
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                       │
│ * entity_path: /nullability/static                                                                              │
│ * id: [**REDACTED**]                                                                                            │
│ * version: [**REDACTED**]                                                                                       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────────────────────────┬──────────────────────────────┬──────────────────────────────┐ │
│ │ RowId                                         ┆ static_metadata_a            ┆ static_metadata_b            │ │
│ │ ---                                           ┆ ---                          ┆ ---                          │ │
│ │ type: non-null FixedSizeBinary(16)            ┆ type: List(Utf8)             ┆ type: List(Utf8)             │ │
│ │ ARROW:extension:metadata: {"namespace":"row"} ┆ component: static_metadata_a ┆ component: static_metadata_b │ │
│ │ ARROW:extension:name: TUID                    ┆ kind: data                   ┆ kind: data                   │ │
│ │ is_sorted: true                               ┆                              ┆                              │ │
│ │ kind: control                                 ┆                              ┆                              │ │
│ ╞═══════════════════════════════════════════════╪══════════════════════════════╪══════════════════════════════╡ │
│ │ row_[**REDACTED**]                            ┆ [static_metadata_a]          ┆ [static_metadata_b]          │ │
│ └───────────────────────────────────────────────┴──────────────────────────────┴──────────────────────────────┘ │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
